--- a/css/pages/login.css
+++ b/css/pages/login.css
@@ -14,6 +14,7 @@ body {
 	font-size: 18px;
 	background: var(--color-secondary);
 	background-size: cover;
+	overflow-x: hidden;
 }
 header {
 	width: 100%;
@@ -33,6 +34,17 @@ header {
 	margin: 0 auto;
 	text-align: center;
 	margin-bottom: 50px;
+}
+
+.ball {
+	position: absolute;
+	top: 0%;
+	right: 0%;
+	height: 200px;
+	width: 200px;
+	position: absolute;
+	background-color: darkblue;
+	border-radius: 50%;
 }
 
 .form-container {
